--- a/portfolio.css
+++ b/portfolio.css
@@ -240,3 +240,48 @@ footer {
     width: 100%; /* Assure que l'image s'adapte à la taille de la div */
     display: block;
 }
+.sidebar {
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: -250px;
+    height: 100%;
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    overflow-y: auto;
+    box-shadow: 2px 10px 10px black;
+    transition: left 0.3s ease;
+}
+
+.sidebar.open {
+    left: 0;
+}
+
+.toggle-btn {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    z-index: 1000;
+    border-radius: 5px;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.toggle-btn:hover {
+    background-color: #444;
+}
+
+main {
+    margin-left: 0;
+    padding: 20px;
+    transition: margin-left 0.3s ease;
+}
+
+main.shifted {
+    margin-left: 250px;
+}
