--- a/portfolio.css
+++ b/portfolio.css
@@ -79,7 +79,7 @@ nav ul li a:hover {
     position: fixed;
     top: 0;
     left: -250px;
-    height: 100%;
+    height: 100vh;
     background-color: #333;
     color: #fff;
     padding: 20px 0;
@@ -132,12 +132,12 @@ nav ul li a:hover {
 
 .sidebar .icon {
     display: block;
-    width: 40px; /* Ajustez la taille des icônes selon vos préférences */
+    width: 40px;
     height: auto;
 }
 
 .sidebar .icon img {
-    width: 100%; /* Assure que l'image s'adapte à la taille de la div */
+    width: 100%;
     display: block;
 }
 
@@ -162,11 +162,12 @@ nav ul li a:hover {
 main {
     margin-left: 0;
     padding: 20px;
-    transition: margin-left 0.3s ease;
+    transition: margin-left 0.3s ease, padding-left 0.3s ease;
 }
 
 main.shifted {
     margin-left: 250px;
+    padding-left: 250px;
 }
 
 section {
@@ -266,4 +267,29 @@ footer {
     padding: 20px 0;
     margin-top: 20px;
     box-shadow: 2px 10px 15px 10px black;
+}
+
+.background-image {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.background-image img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.centered-text {
+    position: absolute;
+    color: #fff;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 0;
 }
